--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.27.2",
     "firebase": "^9.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
