--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-accessible-dropdown-menu-hook": "^3.2.0",
+    "react-chat-engine": "^1.11.23",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.1",
     "react-icons": "^4.4.0",
